--- a/config.conf
+++ b/config.conf
@@ -3,9 +3,9 @@
 # * Fill the Required Variables
 season="1"
 episode="01" 
-total_frame="4000" # total frames cutted
+total_frame="3123" # total frames cutted
 img_fps="" # the fps of the cutted frames
-page_name="" # (must be exact) this is used for checking if the token is valid
+page_name="Every Beavis and Butt-head Frame In Order" # (must be exact) this is used for checking if the token is valid
 
 # message/caption formatting (supports emoji/hashtags)
 # available variables are:
@@ -17,7 +17,7 @@ page_name="" # (must be exact) this is used for checking if the token is valid
 #    {\n}:              (new-line character)
 #
 #    Note: frame_timestamp only needed `img_fps` variable message_craft needs the subtitle
-message='Season {season}, Episode {episode}, Frame {prev_frame} out of {total_frame}'
+message='Season {season}, Episode {episode} DOOR to DOOR - Frame {prev_frame} out of {total_frame}'
 
 # page bio formatting (supports emoji | 101 char limit)
 # available variables are:
