--- a/config.conf
+++ b/config.conf
@@ -17,7 +17,7 @@ page_name="Every Beavis and Butt-head Frame In Order" # (must be exact) this is 
 #    {\n}:              (new-line character)
 #
 #    Note: frame_timestamp only needed `img_fps` variable message_craft needs the subtitle
-message='Season {season}, Episode {episode} DOOR to DOOR - Frame {prev_frame} out of {total_frame}'
+message='Season {season}, Episode {episode} - Frame {prev_frame} out of {total_frame} {\n} {frame_timestamp}'
 
 # page bio formatting (supports emoji | 101 char limit)
 # available variables are:
@@ -39,7 +39,7 @@ abt_txt='Chopped {img_fps} FPS, Posting {fph} Frames every {get_interval} hours.
 subtitle_file="subtitle_en.ass:subtitle_jp.ass"
 
 # Enabling/Disabling Addons (0: Disabled, 1: Enabled)
-sub_posting="0"
+sub_posting="1"
 rand_post="0"
 gif_post="0"
 desc_update="1"
