--- a/config.conf
+++ b/config.conf
@@ -17,7 +17,7 @@ page_name="Every Beavis and Butt-head Frame In Order" # (must be exact) this is 
 #    {\n}:              (new-line character)
 #
 #    Note: frame_timestamp only needed `img_fps` variable message_craft needs the subtitle
-message='Season {season}, Episode {episode} - Frame {prev_frame} out of {total_frame} {\n} {frame_timestamp}'
+message='Season {season}, Episode {episode} - Frame {prev_frame} out of {total_frame} {message_craft}'
 
 # page bio formatting (supports emoji | 101 char limit)
 # available variables are:
