--- a/config.conf
+++ b/config.conf
@@ -2,8 +2,8 @@
 
 # * Fill the Required Variables
 season="1"
-episode="01" 
-total_frame="3123" # total frames cutted
+episode="02" 
+total_frame="2149" # total frames cutted
 img_fps="" # the fps of the cutted frames
 page_name="Every Beavis and Butt-head Frame In Order" # (must be exact) this is used for checking if the token is valid
 
@@ -17,7 +17,8 @@ page_name="Every Beavis and Butt-head Frame In Order" # (must be exact) this is 
 #    {\n}:              (new-line character)
 #
 #    Note: frame_timestamp only needed `img_fps` variable message_craft needs the subtitle
-message='Season {season}, Episode {episode} - Frame {prev_frame} out of {total_frame} {message_craft}'
+message='Season {season}, Episode {episode} (Give Blood) -
+{\n}Frame {prev_frame} out of {total_frame} {message_craft}'
 
 # page bio formatting (supports emoji | 101 char limit)
 # available variables are:
